fixtures/uitests/tests/ui/interface_trait_not_sync_and_send.stderr
error[E0277]: `dyn Trait` cannot be shared between threads safely
 --> $OUT_DIR[uniffi_uitests]/trait.uniffi.rs
  |
  | uniffi::deps::static_assertions::assert_impl_all!(dyn r#Trait: Sync, Send);
  |                                                   ^^^^^^^^^^^ `dyn Trait` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `dyn Trait`
note: required by a bound in `assert_impl_all`
 --> $OUT_DIR[uniffi_uitests]/trait.uniffi.rs
  |
  | uniffi::deps::static_assertions::assert_impl_all!(dyn r#Trait: Sync, Send);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
  = note: this error originates in the macro `uniffi::deps::static_assertions::assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `dyn Trait` cannot be sent between threads safely
 --> $OUT_DIR[uniffi_uitests]/trait.uniffi.rs
  |
  | uniffi::deps::static_assertions::assert_impl_all!(dyn r#Trait: Sync, Send);
  |                                                   ^^^^^^^^^^^ `dyn Trait` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `dyn Trait`
note: required by a bound in `assert_impl_all`
 --> $OUT_DIR[uniffi_uitests]/trait.uniffi.rs
  |
  | uniffi::deps::static_assertions::assert_impl_all!(dyn r#Trait: Sync, Send);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
  = note: this error originates in the macro `uniffi::deps::static_assertions::assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)
